Bundler: Implement most of the logic.
All that's left is AppImage, msi, and pkg generation.